--- a/src/components/Footer/footer.css
+++ b/src/components/Footer/footer.css
@@ -31,7 +31,7 @@ margin: 0;
 }
 
 .footer__link{
-font-family: 'Roboto' serif;
+font-family: 'Roboto', serif;
 font-size: 18px;
 font-weight: 400;
 line-height: 24px;
