--- a/src/components/Navigation/navigation.css
+++ b/src/components/Navigation/navigation.css
@@ -74,7 +74,7 @@ color: #000;
   @media  screen and (max-width: 615px) {
 
     .navbar{
-        padding: 16px;
+        padding: 0;
     }
     
     .navbar__links{
